<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/dp_8"
        tools:context=".MainActivity">

        <ScrollView
            android:id="@+id/scrollView_preview"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_0"
            android:layout_marginBottom="@dimen/dp_8"
            android:background="@color/grey"
            app:layout_constraintBottom_toTopOf="@id/btn_file_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <TextView
                android:id="@+id/decoded_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_12" />
        </ScrollView>

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group_lottie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="message_lottie,message_text" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/message_lottie"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_0"
            app:layout_constraintBottom_toTopOf="@id/message_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintWidth_percent="0.4"
            app:lottie_autoPlay="false"
            app:lottie_loop="false" />

        <TextView
            android:id="@+id/message_text"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:text="@string/select_the_file_to_decode"
            android:textAlignment="center"
            android:textSize="@dimen/sp_16"
            app:layout_constraintBottom_toTopOf="@id/btn_file_1"
            app:layout_constraintEnd_toEndOf="@id/message_lottie"
            app:layout_constraintStart_toStartOf="@id/message_lottie"
            app:layout_constraintTop_toBottomOf="@id/message_lottie" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_view_decoded_file"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_8"
            android:text="@string/preview"
            android:textSize="@dimen/sp_12"
            app:icon="@drawable/ic_preview_file"
            app:layout_constraintBottom_toTopOf="@id/btn_file_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/message_text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_file_1"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_8"
            android:text="@string/wav_file1"
            android:textSize="@dimen/sp_12"
            app:icon="@drawable/ic_file"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_file_2"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_file_2"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_8"
            android:text="@string/wav_file2"
            android:textSize="@dimen/sp_12"
            app:icon="@drawable/ic_file"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_file_3"
            app:layout_constraintStart_toEndOf="@id/btn_file_1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_file_3"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_8"
            android:text="@string/wav_file3"
            android:textSize="@dimen/sp_12"
            app:icon="@drawable/ic_file"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_file_2" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>